--- a/CityTrax/app/src/main/res/layout/activity_get_started.xml
+++ b/CityTrax/app/src/main/res/layout/activity_get_started.xml
@@ -35,4 +35,16 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonStart"
         app:layout_constraintVertical_bias="0.745" />
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="City Trax allows you to track volunteer hours worked and send a report to the volunteer organization."
+        tools:layout_editor_absoluteY="293dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/buttonStart"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/buttonStart"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/buttonStart"/>
 </android.support.constraint.ConstraintLayout>
