--- a/CityTrax/app/src/main/res/layout/activity_get_started.xml
+++ b/CityTrax/app/src/main/res/layout/activity_get_started.xml
@@ -15,6 +15,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="Get Started!"
+        android:textColor="@color/colorFontWhite"
+        android:background="@color/colorGreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
