--- a/CityTrax/app/src/main/res/layout/activity_volunteer_creation_page.xml
+++ b/CityTrax/app/src/main/res/layout/activity_volunteer_creation_page.xml
@@ -126,7 +126,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Hours"
         app:layout_constraintVertical_bias="0.351"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabHome"
