--- a/CityTrax/app/src/main/res/layout/activity_register.xml
+++ b/CityTrax/app/src/main/res/layout/activity_register.xml
@@ -102,6 +102,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:background="@color/colorGreen"
         android:text="SAVE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
