Design changes to Get Started, update Volunteer Page fields

--- a/CityTrax/app/src/main/res/layout/activity_volunteer_creation_page.xml
+++ b/CityTrax/app/src/main/res/layout/activity_volunteer_creation_page.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="26dp"
         android:ems="10"
-        android:hint="Full Name:"
+        android:hint="Full Name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Organization:"
+        android:hint="Organization"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -50,7 +50,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Organization email:"
+        android:hint="Organization email"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -68,7 +68,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         android:ems="10"
-        android:hint="Date:"
+        android:hint="Date"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.433"
@@ -86,7 +86,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Hours:"
+        android:hint="Hours"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
