Add date picker and number keypad to volunteer event page

--- a/CityTrax/app/src/main/res/layout/activity_volunteer_creation_page.xml
+++ b/CityTrax/app/src/main/res/layout/activity_volunteer_creation_page.xml
@@ -32,7 +32,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Organization"
+        android:hint="Organization Name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -51,7 +51,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Organization email"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -68,8 +68,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         android:ems="10"
-        android:hint="Date"
+        android:hint="Select Date"
         android:inputType="textPersonName"
+        android:focusable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.433"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -87,7 +88,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Hours"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
