Added StopWatch Functionality
Users can save time back into the hour field
Fixed some buttons

--- a/CityTrax/app/src/main/res/layout/activity_home.xml
+++ b/CityTrax/app/src/main/res/layout/activity_home.xml
@@ -20,9 +20,9 @@
         android:layout_marginTop="8dp"
         android:clickable="true"
         android:focusable="true"
-        android:tint="#ffffff"
-        app:backgroundTint="@android:color/holo_green_light"
-        app:fabSize="mini"
+        android:tint="@android:color/black"
+        app:backgroundTint="@android:color/holo_green_dark"
+        app:fabSize="normal"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="right|bottom"
         app:layout_constraintBottom_toBottomOf="parent"
