Recycler view updated to larger text

--- a/CityTrax/app/src/main/res/layout/volunteered_list_row.xml
+++ b/CityTrax/app/src/main/res/layout/volunteered_list_row.xml
@@ -6,35 +6,99 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/date_row"
-        android:layout_width="wrap_content"
-        android:layout_height="15dp"
+        android:id="@+id/org_name_row"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:hint="@string/date"
-        app:layout_constraintEnd_toStartOf="@+id/org_name_row"
+        android:layout_marginTop="8dp"
+        android:hint="@string/org_name"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:translationY="6dp"
+        android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/org_name_row"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:hint="@string/org_name"
-        app:layout_constraintEnd_toStartOf="@+id/hours_row"
+        android:id="@+id/hours_row"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:width="120dp"
+        android:hint="@string/hours_worked"
+        android:textAlignment="viewEnd"
+        android:textSize="24sp"
+        android:translationY="6sp"
+        android:typeface="sans"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/date_row"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/org_name_row" />
 
     <TextView
-        android:id="@+id/hours_row"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/date_row"
+        android:layout_width="128dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
-        android:hint="@string/hours_worked"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/org_name_row"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="8dp"
+        android:hint="@string/date"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:translationY="6dp"
+        android:typeface="sans"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/org_name_row" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="64dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="12dp"
+        android:text="@string/textHours"
+        android:textAlignment="viewStart"
+        android:textSize="20sp"
+        android:translationY="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/hours_row"
+        tools:text="Hours" />
+    <!--
+        <QuickContactBadge
+            android:id="@+id/editVolDetail"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:drawable/ic_menu_edit"
+            android:cropToPadding="false"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/hours_row"
+            app:layout_constraintTop_toBottomOf="@+id/org_name_row"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <QuickContactBadge
+            android:id="@+id/sendEmail"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:adjustViewBounds="false"
+            android:background="@android:drawable/ic_dialog_email"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/editVolDetail"
+            app:layout_constraintTop_toBottomOf="@+id/org_name_row"
+            app:srcCompat="@android:drawable/ic_dialog_email" />
+    -->
 </android.support.constraint.ConstraintLayout>
