--- a/CityTrax/app/src/main/res/layout/recyclerview_items.xml
+++ b/CityTrax/app/src/main/res/layout/recyclerview_items.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardElevation="7dp"
-    card_view:contentPadding="7dp"
+    android:layout_marginBottom="10dp"
+    card_view:cardBackgroundColor="@android:color/holo_green_light"
     card_view:cardCornerRadius="7dp"
+    card_view:cardElevation="7dp"
     card_view:cardMaxElevation="7dp"
-    >
+    card_view:contentPadding="7dp">
 
     <TextView
         android:id="@+id/textview1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:padding="10dp"
         android:layout_gravity="center"
         android:gravity="center"
-        />
+        android:padding="10dp"
+        android:textColor="@color/colorFontWhite"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </android.support.v7.widget.CardView>
