--- a/CityTrax/app/src/main/res/values/colors.xml
+++ b/CityTrax/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorGreen">#009688</color>
     <color name="colorFontWhite">#ffffff</color>
-
+    <color name="colorBlack">#000000</color>
 </resources>
