--- a/CityTrax/app/src/main/res/layout/content_home.xml
+++ b/CityTrax/app/src/main/res/layout/content_home.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="@+id/company_logo" />
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -45,7 +45,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:contentDescription="@string/logo"
-        app:layout_constraintBottom_toTopOf="@+id/time"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -53,17 +53,17 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/volunteeredListRV"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time">
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
     </android.support.v7.widget.RecyclerView>
 
