--- a/CityTrax/app/src/main/res/layout/activity_home.xml
+++ b/CityTrax/app/src/main/res/layout/activity_home.xml
@@ -20,8 +20,8 @@
         android:layout_marginTop="8dp"
         android:clickable="true"
         android:focusable="true"
-        android:tint="@android:color/black"
-        app:backgroundTint="@android:color/holo_green_dark"
+        android:tint="#ffffff"
+        app:backgroundTint="@android:color/holo_green_light"
         app:fabSize="normal"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="right|bottom"
@@ -33,5 +33,28 @@
         app:layout_constraintTop_toBottomOf="@+id/hoursWorked"
         app:layout_constraintVertical_bias="0.351"
         app:srcCompat="@android:drawable/ic_input_add" />
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_suggested_places"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:tint="#ffffff"
+        app:backgroundTint="@android:color/holo_green_light"
+        app:fabSize="normal"
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="left|bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hoursWorked"
+        app:layout_constraintVertical_bias="0.351"
+        app:srcCompat="@android:drawable/ic_search_category_default" />
 
 </android.support.design.widget.CoordinatorLayout>
