--- a/CityTrax/app/src/main/res/layout/activity_opportunities.xml
+++ b/CityTrax/app/src/main/res/layout/activity_opportunities.xml
@@ -22,15 +22,15 @@
 
     <include layout="@layout/content_opportunities" />
 
+    <!--
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@android:color/holo_green_dark"
-        app:fabSize="normal"
-        app:srcCompat="@drawable/home" />
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+    -->
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
